# cof

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake_linux_build.yml
CosmoOrganization.Core/: CMakeLists.txt
CosmoOrganization.Core/include/: CosmoOrganization.Core.h  Dependency.h  DependencyInjector.h  Dummy.h  INode.h  IObject.h  Messanger.h  Node.h  NullSafeCall.h  Object.h
CosmoOrganization.Core/src/: Dependency.cpp  DependencyInjector.cpp  INode.cpp  Node.cpp  NullSafeCall.cpp  Object.cpp
CosmoOrganization.CoreService/: CMakeLists.txt
CosmoOrganization.CoreService/include/: PlatformService.h
CosmoOrganization.CoreService/src/: PlatformService.cpp  examplelib.cpp
CosmoOrganization.PluginService/: CMakeLists.txt
CosmoOrganization.PluginService/include/: PluginService.h
CosmoOrganization.PluginService/src/: main.cpp
plugins/: CMakeLists.txt
plugins/test1plugin/: Source.cpp  test1plugin.vcxproj
test/: CMakeLists.txt  corelibtest.cpp
